--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
     "element-plus": "^1.1.0-beta.17",
+    "gitalk": "^1.7.2",
     "tailwindcss": "^2.2.15"
   },
   "husky": {
