--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "@element-plus/icons": "^0.0.11",
     "element-plus": "^1.1.0-beta.17",
     "gitalk": "^1.7.2",
-    "tailwindcss": "^2.2.15"
+    "tailwindcss": "^2.2.15",
+    "ts-md5": "^1.2.9"
   },
   "husky": {
     "hooks": {
